Updated text and CV

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img class="teo" src="Teo2nd.png" alt="Teo, a web developer seeking for experience and a job opportunity">
             <section class="home-section">
                 <h1>Hello, I'm Teo, a Web Developer</h1>
-                <p>Currently pursuing web development training, I am seeking an apprenticeship to further my skills and gain practical experience. Pragmatic and determined, I am eager to bring my energy and enthusiasm to your company. I strongly believe that hands-on experience is essential for building expertise and making meaningful contributions to a team.</p>
+                <p>Currently pursuing web development training, I am seeking an apprenticeship or a junior position to further my skills and gain practical experience. Pragmatic and determined, I am eager to bring my energy and enthusiasm to your company. I strongly believe that hands-on experience is essential for building expertise and making meaningful contributions to a team.</p>
             </section>
         </div>
 
@@ -39,7 +39,8 @@
                     I studied philology in France at Sorbonne Nouvelle. 
                     After that, I decided to pursue a lifelong dream by purchasing my own property in the countryside and investing in agricultural projects.
                     My passion for the internet, combined with my experience in game modifications, naturally led me to explore coding languages and programming principles.
-                    This sparked a strong interest in web development, prompting me to reorient my path and fully commit to learning the field. 
+                    This sparked a strong interest in web development, prompting me to reorient my path and fully commit to learning the field.
+                    During the summer of 2025, I also worked briefly as a Junior Web Developer, creating WordPress websites and contributing to front‑end improvements.
                     I am now actively seeking opportunities to gain hands-on experience and, ultimately, secure a stable job as a web developer.
                 </article>
             </section>
